...
    <SafeAreaView style={styles.container}>
      <View style={styles.main}>
        <TouchableOpacity onPress={handleReturn}>
          <MaterialIcons name="arrow-back-ios" size={24} color="black" />
        </TouchableOpacity>
        <Text style={styles.selectDate}>
          <Text>Select Date</Text>
        </Text>
      </View>

      <View style={styles.calendarContainer}>
        <Calendar
          style={styles.calendar}
...
      </View>

      <TouchableOpacity
        style={[styles.continueBtn, { backgroundColor: isContinueDisabled ? '#E6E6E6' : '#094074' }]}
        onPress={handleContinue}
        disabled={isContinueDisabled}>
        <Text style={styles.continueText}>Continue</Text>
      </TouchableOpacity>

    </SafeAreaView>
  )
}

...
