...
        </TouchableOpacity>
        <Text style={styles.facInfo}>Facility Info</Text>
      </View>

      <ScrollView showsVerticalScrollIndicator={false}>
        <View style={styles.box}>
          <Text style={styles.text}>Location: </Text>
          <LocationBox data={locationText} />
        </View>

        <View>
          <Text style={styles.text}>Maximum hours per week</Text>
          <InfoBox data={maxHours} />
...
          <Text style={styles.text}>Last Booking Slot Timing</Text>
          <InfoBox data={lastBookingSlot} />
        </View>
      </ScrollView>

      <TouchableOpacity style={styles.proceedBtn} onPress={handleProceed}>
        <Text style={styles.proceedText}>Proceed</Text>
      </TouchableOpacity>
    </SafeAreaView>
  );
}

const styles = StyleSheet.create({
...
