appId: <app>
---
- tapOn: "MPSH"
# check for facility info page
- tapOn: "Facility Info"
- assertVisible: "Location: "
- assertVisible: "Maximum hours per week"
- assertVisible: "Number of facilities"
- assertVisible: "First Booking Slot Timing"
- assertVisible: "Last Booking Slot Timing"
- tapOn: "Proceed"
# check for select date page
- assertVisible: "Select Date"
- tapOn:
    text: "31"
- tapOn: "Continue"
# check for select Time page
- assertVisible: "Select Time"
# check that back buttons all work
- tapOn: ""
- assertVisible: "Select Date"
- tapOn: ""
- assertVisible:
    text: "Facilities"
    index: 0
# test to make bookings
- tapOn: "MPSH"
- tapOn: "Proceed"
- tapOn:
    text: "1"
    index: 0
- tapOn: "Continue"
- tapOn: "31"
- tapOn: "Continue"
- tapOn:
    text: "17:00"
    index: 1
- tapOn: "Book Now"
- assertVisible: "Your booking is successful! You can view it at the bookings page."
- tapOn: "OK"
- assertVisible:
    text: "Facilities"
    index: 0
# Test to make another booking at the same time slot. 
- tapOn: "MPSH"
- tapOn: "Proceed"
- tapOn: "31"
- tapOn: "Continue"
- tapOn: "17:00"
- tapOn: "Book Now"
- assertVisible: "You have reached the maximum number of bookings for this facility\
    \ per hour (1). Please try to book for another timing!"
- tapOn: "OK"
# book another time slot in the same week
- tapOn:
    text: "18:00"
    index: 1
- tapOn: "Book Now"
- assertVisible: "Your booking is successful! You can view it at the bookings page."
- tapOn: "OK"
# book another one in the same week.
- tapOn: "MPSH"
- tapOn: "Proceed"
- tapOn: "31"
- tapOn: "Continue"
- tapOn: "You have reached the maximum number of hours per week (2 hours) for this\
    \ facility. Please select another facility or date, or cancel the existing bookings\
    \ in that week."
- tapOn: "OK"
# resest extra bookings
- tapOn: "Bookings"
- tapOn:
    text: "Cancel"
    index: 1
- tapOn: "OK"
- tapOn: "Facilities"